--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,15 @@
 #map {
     min-height: 360px;
 }
+
+#state_map {
+    min-height: 360px;
+}
+
+#data-box {
+    top: 10px;
+    left: 500px;
+    height: 45px;
+    line-height: 45px;
+    display: none;
+}
